# fipip

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: enformer_targets.txt  test_df.tsv
fipip/: __init__.py  cli.py
fipip/scripts/: alphagenome.py  borzoi_1.py  borzoi_2.py  calculate_fipip.py  enformer.py  fipip.py  predict_from_json.py  test_command.py
fipip/utils/: utils.py
tutorials/: alphagenome_cli.py  borzoi_1.py  borzoi_2.py  enformer.py  enformer_targets.txt  example_data.tsv  example_variants.tsv  test_df.tsv  test_df_v2.tsv  train_df.tsv
