[project]
name = "fipip"
description = "Functionally Informed Fine-mapping"
version = "0.0.1"
authors = [{name = "Michael Sweeney", email = "mikeswny@umich.edu"}]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy", "pandas", "pysam"
]

[project.scripts]
fipip = "fipip.cli:main"
alphagenome = "tutorials.alphagenome_cli:main"
borzoi_1 = "tutorials.borzoi_1:main"
borzoi_2 = "tutorials.borzoi_2:main"
enformer = "tutorials.enformer:main"
calculate_fipip = "fipip.scripts.fipip:main"
predict_from_json = "fipip.scripts.predict_from_json:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
scripts = ["*.txt", "*.rst", "*.html"]

[tool.setuptools.packages.find]
include = ["fipip*"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.urls]
"Homepage" = "https://statgen.github.io/fipip/"
"Bug Tracker" = "https://github.com/statgen/fipip/issues"
